Some work on the introduction section.

--- a/ChimaObi.html
+++ b/ChimaObi.html
@@ -52,19 +52,24 @@
     <div class="contain intro">
         <div class="container">
             <div class="intro-me">
-                <div class="text">
-                    <p>THIS IS ME</p>
-                    <h1>ChimaObi</h1>
-                    <p>a passionate web developer with an eye for clean design and intuitive user experiences. When I'm not crafting responsive websites and dynamic interfaces, you'll find me expressing creativity through music as a dedicated pianist and flutist. I thrive at the intersection of logic and artistry, bringing both precision and soul to everything I create.</p>
-                    <button class="btn discover-btn" type="button">DISCOVER NOW</button>
+                <div class="introText">
+                    <div class="text">
+                        <p>THIS IS ME</p>
+                        <h1>ChimaObi</h1>
+                        <p>a passionate web developer with an eye for clean design and intuitive user experiences. When I'm not crafting responsive websites and dynamic interfaces, you'll find me expressing creativity through music as a dedicated pianist and flutist. I thrive at the intersection of logic and artistry, bringing both precision and soul to everything I create.</p>
+                        <button class="btn discover-btn" type="button">DISCOVER NOW</button>
+                    </div>
                 </div>
-                <div class="photo">
-                    <div class="photo1"></div>
+                <div class="introPhoto">
+                    <div class="photo">
+                        <img class="photo_bg" src="./images/chimao.png" alt="" srcset="">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </main>
+
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
