--- a/ChimaObi.html
+++ b/ChimaObi.html
@@ -61,9 +61,7 @@
                     </div>
                 </div>
                 <div class="introPhoto">
-                    <div class="photo">
-                        <img class="photo_bg" src="./images/chimao.png" alt="" srcset="">
-                    </div>
+                    <img class="photo_bg" src="./images/introPhoto.png" alt="" srcset="">
                 </div>
             </div>
         </div>
