Introduction section conpleted!

--- a/ChimaObi.html
+++ b/ChimaObi.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-<div class="contain header border-bottom">
+<div class="contain header sticky-top">
     <div class="container">
         <div class="logo"><span>Chima<span style="color: aqua;">Obi</span></span></div>
         <div class="menu">
@@ -62,6 +62,24 @@
                 </div>
                 <div class="introPhoto">
                     <img class="photo_bg" src="./images/introPhoto.png" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="contain aboutMe">
+        <div class="container">
+            <div class="about-me">
+                <div class="aboutPhoto">
+                    <img class="aboutphoto_bg" src="./images/chima.png" alt="" srcset="">
+                </div>
+                <div class="aboutText">
+                    <div class="textAboutMe">
+                        <p>THIS IS ME</p>
+                        <h1>ChimaObi</h1>
+                        <p>a passionate web developer with an eye for clean design and intuitive user experiences. When I'm not crafting responsive websites and dynamic interfaces, you'll find me expressing creativity through music as a dedicated pianist and flutist. I thrive at the intersection of logic and artistry, bringing both precision and soul to everything I create.</p>
+                        <button class="btn discover-btn" type="button">DISCOVER NOW</button>
+                    </div>
                 </div>
             </div>
         </div>
