Started the About Me Section!

--- a/ChimaObi.html
+++ b/ChimaObi.html
@@ -75,10 +75,10 @@
                 </div>
                 <div class="aboutText">
                     <div class="textAboutMe">
-                        <p>THIS IS ME</p>
+                        <p>ABOUT ME</p>
                         <h1>ChimaObi</h1>
-                        <p>a passionate web developer with an eye for clean design and intuitive user experiences. When I'm not crafting responsive websites and dynamic interfaces, you'll find me expressing creativity through music as a dedicated pianist and flutist. I thrive at the intersection of logic and artistry, bringing both precision and soul to everything I create.</p>
-                        <button class="btn discover-btn" type="button">DISCOVER NOW</button>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ab unde illum nesciunt itaque dolores, esse quia assumenda consectetur nam distinctio, accusantium eaque hic incidunt! Omnis dolorem quasi placeat ut.</p>
+                        <button class="btn fullDetails-btn" type="button">VIEW FULL DETAILS</button>
                     </div>
                 </div>
             </div>
