Changed introPhoto and aboutPhoto: compressed

--- a/ChimaObi.html
+++ b/ChimaObi.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="introPhoto">
-                    <img class="photo_bg" src="./images/introPhoto.png" alt="" srcset="">
+                    <img class="photo_bg" src="./images/introPhotocomp.png" alt="" srcset="">
                 </div>
             </div>
         </div>
@@ -71,14 +71,52 @@
         <div class="container">
             <div class="about-me">
                 <div class="aboutPhoto">
-                    <img class="aboutphoto_bg" src="./images/chima.png" alt="" srcset="">
+                    <img class="aboutphoto_bg" src="./images/chimacomp.png" alt="" srcset="">
                 </div>
                 <div class="aboutText">
                     <div class="textAboutMe">
                         <p>ABOUT ME</p>
-                        <h1>ChimaObi</h1>
+                        <h1>PERSONAL DETAILS</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ab unde illum nesciunt itaque dolores, esse quia assumenda consectetur nam distinctio, accusantium eaque hic incidunt! Omnis dolorem quasi placeat ut.</p>
                         <button class="btn fullDetails-btn" type="button">VIEW FULL DETAILS</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="contain services">
+        <div class="container serve">
+            <div class="servicesMain">
+                <div class="service1">
+                    <h1>MY OFFERED SERVICES</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                </div>
+                <div class="serviceOffers row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3">
+                    <div class="serviceOffers1">
+                        <h3>Web Design</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                    </div>
+                    <div class="serviceOffers2">
+                        <h3>Web Development</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                    </div>
+                    <div class="serviceOffers3">
+                        <i class="fa-regular fa-camera"></i>
+                        <h3>Music Performance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                    </div>
+                    <div class="serviceOffers4">
+                        <h3>Music Composition</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                    </div>
+                    <div class="serviceOffers5">
+                        <h3>Educator</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
+                    </div>
+                    <div class="serviceOffers6">
+                        <h3>Graphic Design</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sapiente dolorum asperiores aperiam architecto minima deserunt consequatur, magnam, repudiandae culpa consequuntur.</p>
                     </div>
                 </div>
             </div>
